--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>
   <a href="https://www.linkedin.com/in/rahul-dey-1960a919b/">LinkedIn</a>
   <br>
-  <a href="https://github.com/rahuldeyfb33/">Gihub</a>
+  <a href="https://github.com/rahuldeyfb33/">Gihub</a> 
+theme: jekyll-theme-minimal
